--- a/src/main/java/SQL/IngresoDatos.form
+++ b/src/main/java/SQL/IngresoDatos.form
@@ -27,7 +27,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
               <Component id="Datos" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="31" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="856" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
           </Group>
@@ -84,20 +84,20 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="Precio" pref="123" max="32767" attributes="0"/>
-                              <Component id="ID" pref="123" max="32767" attributes="0"/>
-                              <Component id="Tamano" pref="123" max="32767" attributes="0"/>
-                              <Component id="Recamaras" pref="123" max="32767" attributes="0"/>
-                              <Component id="Bano" pref="123" max="32767" attributes="0"/>
-                              <Component id="Cocina" pref="123" max="32767" attributes="0"/>
-                              <Component id="Comedor" pref="123" max="32767" attributes="0"/>
-                              <Component id="Sala" pref="123" max="32767" attributes="0"/>
-                              <Component id="Internet" pref="123" max="32767" attributes="0"/>
+                              <Component id="Precio" max="32767" attributes="0"/>
+                              <Component id="ID" max="32767" attributes="0"/>
+                              <Component id="Tamano" max="32767" attributes="0"/>
+                              <Component id="Recamaras" max="32767" attributes="0"/>
+                              <Component id="Bano" max="32767" attributes="0"/>
+                              <Component id="Cocina" max="32767" attributes="0"/>
+                              <Component id="Comedor" max="32767" attributes="0"/>
+                              <Component id="Sala" max="32767" attributes="0"/>
+                              <Component id="Internet" max="32767" attributes="0"/>
                               <Component id="Zona" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                          <Component id="Cambiar" alignment="1" pref="214" max="32767" attributes="0"/>
+                          <Component id="Cambiar" alignment="1" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="guardar" min="-2" pref="89" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
@@ -283,14 +283,18 @@
         <Component class="javax.swing.JComboBox" name="Zona">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+              <StringArray count="1">
+                <StringItem index="0" value="Selecciona una opci&#xf3;n"/>
               </StringArray>
             </Property>
+            <Property name="selectedItem" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="&quot;Elige una opcion&quot;" type="code"/>
+            </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ZonaMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ZonaActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
